数据预处理

--- a/CGAN.ipynb
+++ b/CGAN.ipynb
@@ -262,329 +262,17 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 361,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n",
-      "torch.Size([10, 256, 256])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from torch.utils.data import DataLoader\n",
     "dataloader = DataLoader(dataset_tensor, batch_size=10, shuffle=True)\n",
     "epoch = 10\n",
     "for i in range(epoch):\n",
     "    for j, data in enumerate(dataloader):\n",
-    "        print(data.shape)"
+    "        pass"
    ]
   },
   {
