增加loss可视化

--- a/CGAN.ipynb
+++ b/CGAN.ipynb
@@ -30,7 +30,9 @@
     "import itertools\n",
     "import time\n",
     "from torchvision import utils\n",
-    "import torchvision.utils as vutils"
+    "import torchvision.utils as vutils\n",
+    "import matplotlib.animation as animation\n",
+    "from IPython.display import HTML"
    ]
   },
   {
@@ -422,7 +424,7 @@
    "outputs": [],
    "source": [
     "noise_dim = 100\n",
-    "num_epochs = 300\n",
+    "num_epochs = 10\n",
     "batch_size = 32\n",
     "lr_D = 2e-4\n",
     "lr_G = 2e-4\n",
@@ -488,7 +490,7 @@
     "\n",
     "velocitys = [64, 128, 192]\n",
     "widths = [16, 32, 64, 96]\n",
-    "dataset = PointDataset(data, widths, velocitys, 10, 0.8)\n",
+    "dataset = PointDataset(data, widths, velocitys, 300, 0.8)\n",
     "dataloader = DataLoader(dataset, batch_size=batch_size, shuffle=True, drop_last=True)\n",
     "img_list = []\n",
     "\n",
@@ -562,14 +564,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(20, 10))\n",
+    "plt.figure(figsize=(10, 5))\n",
     "plt.title(\"Generator and Discriminator Loss During Training\")\n",
-    "plt.plot(G_losses[::100], label=\"G\")\n",
-    "plt.plot(D_losses[::100], label=\"D\")\n",
+    "plt.plot(G_losses, label=\"G Loss\")\n",
+    "plt.plot(D_losses, label=\"D Loss\")\n",
+    "plt.axhline(y=0, label=\"0\", c='g')\n",
     "plt.xlabel(\"iterations\")\n",
     "plt.ylabel(\"Loss\")\n",
-    "plt.axhline(y=0, label=\"0\", c='g') # 渐近线（目标线）\n",
-    "plt.legend()\n"
+    "plt.legend()\n",
+    "plt.show()"
    ]
   },
   {
@@ -640,11 +643,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "fake_images = fake.cpu().numpy().transpose(0, 2, 3, 1)\n",
+    "threshold = 0.01\n",
+    "fake_images = (fake_images > threshold).astype(np.float32)\n",
     "\n",
-    "plt.figure(figsize=(8,8))\n",
-    "plt.axis(\"off\")\n",
-    "plt.title(\"Fake Images\")\n",
-    "plt.imshow(vutils.make_grid(fake, padding=2, normalize=True).permute(1, 2, 0))\n"
+    "if fake_images.shape[-1] == 1:\n",
+    "    fake_images = np.squeeze(fake_images, axis=-1)\n",
+    "\n",
+    "fig, axs = plt.subplots(1, len(fake_images), figsize=(10, 10))\n",
+    "\n",
+    "for i, img in enumerate(fake_images):\n",
+    "    ax = axs[i] if len(fake_images) > 1 else axs\n",
+    "    ax.imshow(img, cmap='gray')\n",
+    "    ax.axis('off')\n",
+    "\n",
+    "plt.show()"
    ]
   }
  ],
