--- a/CGAN.ipynb
+++ b/CGAN.ipynb
@@ -102,7 +102,7 @@
     "        for _, row in sampledata.iterrows():\n",
     "            x, y = int(row['tMouse_X']), int(row['Mouse_Y'])\\\n",
     "            # 暂时先不考虑点重合的问题\n",
-    "            image[y][x] = 1\n",
+    "            image[y][x] += 1\n",
     "        images.append(image)\n",
     "    return images\n",
     "\n",
